<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="125dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/welcome" />

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="24sp"
            android:layout_marginTop="50dp"
            android:textColor="#E91E63"
            />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="20dp"
            android:backgroundTint="#E91E63"
            />

    </LinearLayout>


</RelativeLayout>
